examples/test/testpolicy17212.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17212
  namespace: namespace147
spec:
  podSelector:
    matchLabels:
      key20: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value43
          key15: value42
          key32: value40
      podSelector:
        matchLabels:
          key46: value27
